--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 									<th>Did you check that the open data platform respect all the privacy regulations (registration of the end-user, profiling, cookies, analytics, etc.)?</th>
 									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
-									<td></td>
+									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr class="table-warning">
@@ -429,7 +429,7 @@
 										Controller and Processor of the privacy data of the system?</th>
 									<td>European Commission serves as the Controller, and subcontracted organizations like Kantar Public act as Processors</td>
 									<td><i class="fa fa-check"></i></td>
-									<td></td>
+									<td>ILGA-Europe acts as the Data Controller for the Rainbow Map and related datasets. However, additional details about processors (e.g. third part services) are documented in their privacy policy</td>
 									<td></td>
 								</tr>
 								<tr>
@@ -443,7 +443,7 @@
 									<th>Do you have a cloud computing platform?</th>
 									<td>The European Commission utilizes cloud computing platforms for various data storage and processing needs. It is unclear if cloud computing platforms are used for this specific database</td>
 									<td class="x">&#10060;</td>
-									<td></td>
+									<td class="x">&#10060;</td>
 									<td class="x">&#10060;</td>
 								</tr>
 								<tr>
@@ -451,7 +451,7 @@
 										the dataset are physically stored? (territoriality)</th>
 									<td>The European Commission ensures that all datasets are stored in locations where privacy regulations are compatible with GDPR</td>
 									<td>The dataset follows EU privacy regulations</td>
-									<td></td>
+									<td class="x">&#10060;</td>
 									<td class="x">&#10060;</td>
 								</tr>
 								<tr class="table-warning">
@@ -494,29 +494,29 @@
 									<td>The owner is the <em>European Commission</em>, DirectorateGeneral for Communication, “Media monitoring and
 										Eurobarometer” Unit</td>
 									<td>The owner is the <em>European Agency for Fundamental Rights</em></td>
-									<td></td>
+									<td>IGLA-Europe is the owner of the Rainbow Map dataset. The organisation develops and publishes data annually</td>
 									<td>The owner is LawsAndFamilies database, based in Paris</td>
 								</tr>
 								<tr>
 									<th>Are you sure to not use third party data without the proper authorization and license?</th>
 									<td>The survey methodology does not indicate the use of third-party data</td>
 									<td><i class="fa fa-check"></i></td>
-									<td></td>
+									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr class="table-warning">
 									<th>Are the dataset free from third party licenses or patents?</th>
 									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
-									<td></td>
+									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr>
 									<th>Have you checked if there are some limitations in your national legal system for releasing some kind of datasets with open license?</th>
-									<td>The deataset follows EU regulation</td>
-									<td>The deataset follows EU regulation</td>
-									<td></td>
-									<td>The deataset follows EU regulation</td>
+									<td>The dataset follows EU regulation</td>
+									<td>The dataset follows EU regulation</td>
+									<td>The dataset follows EU regulation</td>
+									<td>The dataset follows EU regulation</td>
 								</tr>
 							  </table>
 							</div>
@@ -542,14 +542,14 @@
 										<th>Do you release the dataset with an open data license?</th>
 										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
 									</tr>
 									<tr class="table-warning">
 										<th>In case of the use of CC0 do you check that you have all the right necessary for this particular kind of license (e.g., jurisdiction)?</th>
 										<td>The European Commission ensures that it holds all the necessary rights to the data and that releasing it under CC0 complies with relevant jurisdictional laws.</td>
 										<td>CC0 does not apply to this dataset.</td>
-										<td></td>
+										<td>The Rainbow Map dataset does not use a CCO license. It is shared with attribution and non-commercial use restrictions, which align with the ILGA-Europe's rights and jurisdiction</td>
 										<td></td>
 									</tr>
 									<tr>
@@ -563,21 +563,21 @@
 										<th>Do you release the API (in case you have) with an open</th>
 										<td></td>
 										<td>No API is avaliable</td>
-										<td></td>
+										<td>No API is available</td>
 										<td>No API is avaliable</td>
 									</tr>
 									<tr>
 										<th>Do you check that the open data/API platform license regime is compliance with your IPR policy?</th>
 										<td>The European Commission ensures that all data and APIs it releases comply with its Intellectual Property Rights (IPR) policies. </td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td>ILGA-Europe's open data release aligns with their organisational IPR policy, which ensures that users can access and use the data within stated terms (e.g. attribution, non-commerical use)</td>
 										<td>The European Commission ensures that all data and APIs it releases comply with its Intellectual Property Rights (IPR) policies. </td>
 									</tr>
 									<tr class="table-warning">
 										<th>Do you have all the licences related to the open data platform/API software?</th>
 										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td><i class="fa fa-check"></i></td>
 										<td></td>
 									</tr>
 								</table>
@@ -604,42 +604,42 @@
 										<th>Do you check that the dataset concerns your institutional competences, scope and finality?</th>
 										<td>The dataset's scope aligns with the European Commission's communication and research objectives (monitoring of public social and political attitudes in the EU).</td>
 										<td>The dataset is aligned the institution's competences and scope of monitoring fulfillment of fundamental rights in EU.</td>
-										<td></td>
+										<td>The Rainbow Map dataset is entirely within the institutional scope and competences of ILGA-Europe, whose mission focuses on LGBTQ rights advocacy and monitoring. The dataset aligns with their purpose of providing comparative insights into LGBTQ rights across Europe</td>
 										<td><i class="fa fa-check"></i></td>
 									</tr>
 									<tr class="table-warning">
 										<th>Do you check if the dataset concerns other public administration competences?</th>
 										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
 									</tr>
 									<tr>
 										<th>Do you check if there are some limitations connected to the international relations, public security or national defence?</th>
 										<td>The information contained in the dataset does not compromise international relations, public security, or national defense</td>
 										<td>The dataset does not include sensitive or classified information</td>
-										<td></td>
+										<td>The Rainbow Map dataset does not include sensitive information that could impact international relations, public security, or national defence</td>
 										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-warning">
 										<th>Do you check if there are some limitations concerning the public interest?</th>
 										<td>The European Commission evaluates public interest concerns, ensuring data publication aligns with transparency goals while avoiding misuse or harm. </td>
 										<td class="x">&#10060;</td>
-										<td></td>
+										<td>The dataset does not conflict with public interest. Instead, it supports public interest by promotion transparency and equality in LGBTQ rights across Europe</td>
 										<td class="x">&#10060;</td>
 									</tr>
 									<tr>
 										<th>Do you check the international law limitations?</th>
 										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
 									</tr>
 									<tr class="table-warning">
 										<th>Do you check the INSPIRE law limitations for the spatial data?</th>
 										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
 									</tr>
 								</table>
@@ -666,56 +666,56 @@
 										<th>Do you check that the dataset could be released for free?</th>
 										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
 									</tr>
 									<tr class="table-warning">
 										<th>Do you check if there are some agreements with some other partners in order to release the dataset with a reasonable price?</th>
 										<td>Not applicable for Eurobarometer, the datasets are released for free</td>
 										<td class="x">&#10060;</td>
-										<td></td>
+										<td>IGLA-Europe does not charge for access to the Rainbow Map dataset</td>
 										<td class="x">&#10060;</td>
 									</tr>
 									<tr>
 										<th>Do you check if the open data platform terms of service include a clause of “non liability agreement” regarding the dataset and API provided?</th>
 										<td>The terms of service include disclaimers to limit liability regarding the accuracy and use of the data provided.</td>
 										<td class="x">&#10060;</td>
-										<td></td>
+										<td>IGLA-Europe's platform include terms specifying that users are responsible for how they use data, effectively including a non-liability agreement</td>
 										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-warning">
 										<th>In case you decide to release the dataset to a reasonable price do you check if the limitation imposed by the new directive 2019/1024/EU are respected?</th>
 										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
-										<td></td>
+										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
 									</tr>
 									<tr>
 										<th>Are you able to calculate the “marginal cost”?</th>
 										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
-										<td></td>
+										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
 									</tr>
 									<tr class="table-warning">
 										<th>Are you able to justify the “reasonable return on investment” limited to cover the costs of collection, production, reproduction, dissemination, preservation and rights clearance?</th>
 										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
-										<td></td>
+										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
 									</tr>
 									<tr>
 										<th>There is a national law that justify your public administration to apply the “reasonable return of investment”?</th>
 										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
-										<td></td>
+										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
 									</tr>
 									<tr class="table-warning">
 										<th> In case you decide to release the dataset to a reasonable price do you check the e-Commerce directive1 and regulation?</th>
 										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
-										<td></td>
+										<td>The data is provided for free</td>
 										<td>The data is provided for free</td>
 									</tr>
 								</table>
@@ -743,14 +743,14 @@
 										<th>Do you have a temporary policy for updating the dataset?</th>
 										<td>Eurobarometer datasets are updated periodically based on new survey waves</td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td>ILGA-Europe updates the Rainbow Map dataset annually to reflect changes in legislation, policies, and societal attitudes. This aligns with their mission of providing up-to-date insights on LGBTQ rights in Europe</td>
 										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-warning">
 										<th>Do you have some mechanism for informing the end-user that the dataset is updated at a given time to avoid mis-usage and so potential risk of damage?</th>
 										<td>Updates are announced on the European Commission's open data portal to inform users</td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td>Updates to the Rainbow Map are publicly announced on ILGA-Europe’s website and through their social media channels. The publication clearly states the year of the dataset, ensuring users understand the data's time frame</td>
 										<td><i class="fa fa-check"></i></td>
 									</tr>
 									<tr>
@@ -758,14 +758,14 @@
 										</th>
 										<td>The dataset is indexed by the research engines </td>
 										<td class="x">&#10060;</td>
-										<td></td>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-warning">
 										<th>In case of personal data, do you have a reasonable technical mechanism for collecting request of deletion (e.g. right to be forgotten)?</th>
 										<td>The European Commission complies with GDPR by providing mechanisms for individuals to request data deletion or exercise other privacy rights</td>
 										<td><i class="fa fa-check"></i></td>
-										<td></td>
+										<td>The Rainbow Map dataset does not include personal data. It consists of aggregated and anonymized information regarding laws, policies, and societal conditions, ensuring compliance with GDPR</td>
 										<td>There is no personal data</td>
 									</tr>
 								</table>
@@ -895,14 +895,14 @@
 											<th>In which country is your data stored?</th>
 											<td>EU member states</td>
 											<td>European Union</td>
-											<td></td>
+											<td>European Union</td>
 											<td>France</td>
 										</tr>
 										<tr class="table-success">
 											<th>Where is the storage solutions provider headquartered?</th>
 											<td>Within the EU</td>
 											<td>Not specified</td>
-											<td></td>
+											<td>Brussels, Belgium</td>
 											<td>Paris</td>
 										</tr>
 										<tr>
@@ -1076,14 +1076,14 @@
 										<th>How is the work with data ethics embedded in the organisation?</th>
 										<td>Ethical guidelines are embedded in the European Commission's practices</td>
 										<td>The organization assures privacy and personal data protection, ensures that data collection, processing, and usage are transparent and understandable, and that data practices do not discriminate or disproportionately harm certain groups.</td>
-										<td></td>
+										<td>ILGA-Europe follows an ethical framework that prioritizes transparency, fairness, and privacy. This includes clear communication about data sources, obtaining informed consent, and reducing bias</td>
 										<td>Ethical guidelines are embedded in the European Commission's practices</td>
 									</tr>
 									<tr>
 										<th>How do you ensure that your data ethics guidelines are respected?</th>
 										<td>Audits, training, and compliance checks</td>
 										<td>Data are collected through a fully anonymized online survey that prevents individuals' identification. Practices are compliant with current EU regulations.</td>
-										<td></td>
+										<td>ILGA-Europe ensures respect for data ethics through regular audits, staff training, stakeholder engagement, and oversight by an ethics committee</td>
 										<td>Audits, training, and compliance checks</td>
 									</tr>
 									<tr class="table-success">
@@ -1971,7 +1971,7 @@
 <img src="imgs/logo.png" alt="logo">
 <div class="right">
 	<p><strong>Digital Ethics Across Europe (DEAE) </strong>is an end-of-course project for the exam <em>Open Access and Digital Ethics</em>, held by Prof Palmirani at University of Bologna in a.y. 2022/2023</p>
-	<p>The project was carried out by Valentina Bertelli, Giorgia Umana ADD</p>
+	<p>The project was carried out by Valentina Bertelli, Giorgia Umana, Alisha Carol Hiscox, and Lukas Firantas</p>
 	<div class="links">
 		<a href="aboutus.html">About Us</a>
 		<a href="documentation.html">Documentation</a>
