--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
 			<div class="tab-content" id="nav-tabContent">
 				<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 					<h3>Quality Analysis</h3>
+					<p>A quality analysis of our source datasets was performed following the <a href="https://docs.italia.it/italia/daf/lg-patrimonio-pubblico/it/stabile/aspettiorg.html#qualita-dei-dati" style="color:red"><em>Italian National Guidelines</em></a> ("Linee guida nazionali per la valorizzazione del patrimonio informativo pubblico") 
+					</p>
+					<p>The four main factors to look for when analysing data quality</p>
 					<div class="accordion" id="accordionQuality">
 						<div class="accordion-item">
 						  <h2 class="accordion-header" id="headingOne">
