--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
 				
 				<div class="datasets">
 					<div class="dataset">
-						<p><strong>Discrimination in the EU</strong></p>
+						<p><strong>Discrimination in the EU, volume A</strong></p>
 						<div class="datasetsDivided">
 							<div class="left">
-								<p>ID: D1</p>
+								<p>ID: DS1</p>
 								<p>Provenience: European Commetee</p>
 								<p>Format: .xlsx, .pdf</p>
 							</div>
 							<div class="right">
 								<p>Metadata: Provided</p>
-								<p>URI:</p>
+								<p>URI:<a href="https://europa.eu/eurobarometer/surveys/detail/2972">Discrimination in EU</a></p>
 								<p>License:</p>
 							</div>
 						</div>
@@ -109,13 +109,13 @@
 						<p><strong>Rainbow Europe</strong></p>
 						<div class="datasetsDivided">
 							<div class="left">
-								<p>ID: D1</p>
+								<p>ID: DS2</p>
 								<p>Provenience: European Commetee</p>
 								<p>Format: .xlsx, .pdf</p>
 							</div>
 							<div class="right">
 								<p>Metadata: Provided</p>
-								<p>URI:</p>
+								<p>URI: <a href="https://rainbowmap.ilga-europe.org/">RainbowMap</a></p>
 								<p>License:</p>
 							</div>
 						</div>
@@ -126,14 +126,14 @@
 						<p><strong>EU LGBTIQ Surveys</strong></p>
 						<div class="datasetsDivided">
 							<div class="left">
-								<p>ID: D1</p>
+								<p>ID: DS3</p>
 								<p>Provenience: European Union Agency for Fundamental Rights
 								</p>
 								<p>Format: .xlsx, .rdf .csv .html</p>
 							</div>
 							<div class="right">
 								<p>Metadata: Not provided</p>
-								<p>URI:</p>
+								<p>URI:<a href="https://fra.europa.eu/en/publications-and-resources/data-and-maps/2024/eu-lgbtiq-survey-iii">EU LGBTIQ Survey 2024</a></p>
 								<p>License:</p>
 							</div>
 						</div>
@@ -144,7 +144,7 @@
 						</strong></p>
 						<div class="datasetsDivided">
 							<div class="left">
-								<p>ID: D1</p>
+								<p>ID: DS3</p>
 								<p>Provenance:  the Institut national d’études démographiques and Leiden University
 								</p>
 								<p>Format: .xls, .pdf</p>
@@ -177,7 +177,14 @@
 					<h3>Quality Analysis</h3>
 					<p>A quality analysis of our source datasets was performed following the <a href="https://docs.italia.it/italia/daf/lg-patrimonio-pubblico/it/stabile/aspettiorg.html#qualita-dei-dati" style="color:red"><em>Italian National Guidelines</em></a> ("Linee guida nazionali per la valorizzazione del patrimonio informativo pubblico") 
 					</p>
-					<p>The four main factors to look for when analysing data quality</p>
+					<p>Four factors have been taken into c0nsideration when analysing data quality:</p>
+					<ul>
+						<li><strong>Completeness</strong>, both of the records and the population </li>
+						<li><strong>Accuracy</strong>, both syntactic and semantic</li>
+						<li><strong>Coherence</strong>, so the presence of contradictions </li>
+						<li><strong>Timeliness</strong>, which concerns when the data was last updated and the avarage update frequency </li>
+					</ul>
+					<br>
 					<div class="accordion" id="accordionQuality">
 						<div class="accordion-item">
 						  <h2 class="accordion-header" id="headingOne">
