--- a/index.html
+++ b/index.html
@@ -792,9 +792,10 @@
 				    </div>
 				</div>
 				<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-					<h3>Ethics Analysis</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+					<h3>Ethical Analysis</h3>
+					<p>The ethical analysis was conducted following the <a href="https://dataethics.eu/data-ethics-principles/"><em> Data Ethics Principles and Guidelines </em></a> 
 					</p>
+					<br>
 					<div class="accordion" id="accordionEthical">
 						<div class="accordion-item">
 						  <h2 class="accordion-header" id="headingOne">
