--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 						</div>
 						<div class="accordion-item">
 						  <h2 class="accordion-header" id="headingTwo">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" >
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" >
 								Accuracy
 							</button>
 						  </h2>
@@ -255,7 +255,7 @@
 						</div>
 						<div class="accordion-item">
 						  <h2 class="accordion-header" id="headingThree">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
 								Coherence
 							</button>
 						  </h2>
@@ -1297,16 +1297,16 @@
 							<tr>
 								<td><strong>Datasets</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS1/Discrimination%20in%20the%20EU_sp535_volumeA.csv">DS1</a>,
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS2/discrimination.csv">DS2</a>,
-									<a href="">DS3</a>,
-									<a href="">DS4</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS1/Discrimination%20in%20the%20EU_sp535_volumeA.csv" target="_blank">DS1</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS2/discrimination.csv" target="_blank">DS2</a>,
+									<a href="" target="_blank">DS3</a>,
+									<a href="" target="_blank">DS4</a>
 								</td>
 							</tr>
 							<tr class="table-danger">
 								<td><strong>Homepage</strong></td>
 								<td>
-									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/" target="_blank">Digital Ethics Across Europe</a>
 								</td>
 							</tr>
 							<tr>
@@ -1320,20 +1320,20 @@
 							<tr>
 								<td><strong>Licence</strong></td>
 								<td>
-									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+									<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>
 								</td>
 							</tr>
 							<tr class="table-danger">
 								<td><strong>Themes</strong></td>
 								<td>
-									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
-									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI" target="_blank">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST" target="_blank">Justice, legal system and public safety</a>
 								</td>
 							</tr>
 							<tr>
 								<td><strong>RDF assertion</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DEAE_catalog.ttl">Download DEAE_catalog.ttl</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DEAE_catalog.ttl" target="_blank">Download DEAE_catalog.ttl</a>
 								</td>
 							</tr>
 					    </tbody>
@@ -1367,13 +1367,13 @@
 							<tr>
 								<td><strong>Source</strong></td>
 								<td>
-									<a href="https://europa.eu/eurobarometer/surveys/detail/2972">Eurobarometer - Discrimination in the European Union</a>
+									<a href="https://europa.eu/eurobarometer/surveys/detail/2972" target="_blank">Eurobarometer - Discrimination in the European Union</a>
 								</td>
 							</tr>
 							<tr class="table-warning">
 								<td><strong>Landing page</strong></td>
 								<td>
-									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/" target="_blank">Digital Ethics Across Europe</a>
 								</td>
 							</tr>
 							<tr>
@@ -1387,7 +1387,7 @@
 							<tr>
 								<td><strong>Licence</strong></td>
 								<td>
-									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+									<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>
 								</td>
 							</tr>
 							<tr class="table-warning">
@@ -1397,15 +1397,15 @@
 							<tr>
 								<td><strong>Themes</strong></td>
 								<td>
-									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
-									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI" target="_blank">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST" target="_blank">Justice, legal system and public safety</a>
 								</td>
 							</tr>
 							<tr class="table-warning">
 								<td><strong>Subjects</strong></td>
 								<td>
-									<a href="http://eurovoc.europa.eu/6231">Discrimination based on sexual oriantation</a>,
-									<a href="http://eurovoc.europa.eu/2152">Public opinion</a>
+									<a href="http://eurovoc.europa.eu/6231" target="_blank">Discrimination based on sexual oriantation</a>,
+									<a href="http://eurovoc.europa.eu/2152" target="_blank">Public opinion</a>
 								</td>
 							</tr>
 							<tr>
@@ -1415,14 +1415,14 @@
 							<tr class="table-warning">
 								<td><strong>Distribution</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS1/Discrimination_in_the_EU_sp535_volumeA.csv">Download CSV</a>,
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS1/Discrimination_in_the_EU_sp535_volumeA.json">Dowload JSON</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS1/Discrimination_in_the_EU_sp535_volumeA.csv" target="_blank">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS1/Discrimination_in_the_EU_sp535_volumeA.json" target="_blank">Dowload JSON</a>
 								</td>
 							</tr>
 							<tr>
 								<td><strong>RDF assertion</strong></td>
 								<td>
-									<a href="metadata/DS1.ttl" download="DS1.ttl">Download DS1.ttl</a>
+									<a href="metadata/DS1.ttl" target="_blank">Download DS1.ttl</a>
 								</td>
 							</tr>
 					    </tbody>
