added technical analysis

--- a/index.html
+++ b/index.html
@@ -791,8 +791,9 @@
 				</div>
 				<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
 					<h3>Ethical Analysis</h3>
-					<p>The ethical analysis was conducted following the <a href="https://dataethics.eu/data-ethics-principles/"><em> Data Ethics Principles and Guidelines </em></a> 
+					<p>The ethical analysis was conducted following the <a href="https://dataethics.eu/data-ethics-principles/"><em> Data Ethics Principles and Guidelines. </em></a>The main principles of data ethics (the focus on the human being, transparency, accountability, equality) have been taken into consideration.
 					</p>
+
 					<br>
 					<div class="accordion" id="accordionEthical">
 						<div class="accordion-item">
@@ -1199,7 +1200,7 @@
 				</div>
 				<div class="tab-pane fade" id="nav-tech" role="tabpanel" aria-labelledby="nav-tech-tab">
 					<h3>Technical Analysis</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+					<p>Lastly, technical aspects of the datasets have been analysed. They include the format of the data, the presence of metadata, the URI and provenance of the datasets.  
 					</p>
 					<div class="accordion" id="accordionTech">
 						<div class="accordion-item">
